# python-sttask

./: DOCS.md  README.md  pyproject.toml  setup.cfg
docs/: README.md
scr/sttask/: __init__.py  utils.py
