[metadata]
name = sttask-THEMYSTZ
version = 0.0.1
author = TheMystZ
author_email = j.p.j2@outlook.com
description = Just a small package I made to help game development without any of that await async nonsence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheMystZ/python-sttask
project_urls =
  	Bug Tracker = https://github.com/TheMystZ/python-sttask/issues
classifiers =
   	Programming Language :: Python :: 3
   	License :: OSI Approved :: MIT License
  	Operating System :: OS Independent
    	Natural Language :: English
	
[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
